--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Luis Herrero</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <h2>Welcome to my page!!</h2>
