--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
-	<title>Luis Herrero</title>
+	<title>Luis Herrero - Product Designer</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Luis Herrero ">
+
+	<link rel="canonical" href="http://luisherrero.es/">
+	<link rel="shortlink" href="http://luisherrero.es/">
+
+<!--
+	<link rel="apple-touch-icon" sizes="180x180" href="http://luisherrero.es/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="http://luisherrero.es/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="http://luisherrero.es/favicon/favicon-16x16.png">
+-->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-<h2>Welcome to my page!!</h2>
+
+<h2>LH: Welcome to my page!!</h2>
+
 </body>
 </html>
+
+
