--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="http://luisherrero.es/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="http://luisherrero.es/favicon/favicon-16x16.png">
 -->
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body class="smooth-scroll loading sec-portfolio">
@@ -58,16 +58,16 @@
 	<nav class="nav">
 		<ul class="nav-list">
 			<li class="nav-item">
-				<a class="nav-item__link link" href="../portfolio/index.html" aria-label="Visit Portfolio Page" data-hover="My Portfolio"><span>Product Design</span></a>
+				<a class="nav-item__link link" href="/portfolio/" aria-label="Visit Portfolio Page" data-hover="My Portfolio"><span>Product Design</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-item__link link" href="../motion/index.html" aria-label="Visit Motion Graphics Page" data-hover="Let's move!"><span>Motion Graphics</span></a>
+				<a class="nav-item__link link" href="/motion/" aria-label="Visit Motion Graphics Page" data-hover="Let's move!"><span>Motion Graphics</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-item__link link" href="../mentoring/index.html" aria-label="Visit Teaching Page" data-hover="Mentoring"><span>Teaching<span class="spacer"></span></span></a>
+				<a class="nav-item__link link" href="/mentoring/" aria-label="Visit Teaching Page" data-hover="Mentoring"><span>Teaching<span class="spacer"></span></span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-item__link link" href="../about/index.html" aria-label="Visit Contact Page" data-hover="Get in touch"><span>About Me<span class="spacer"></span></span></a>
+				<a class="nav-item__link link" href="/about/" aria-label="Visit Contact Page" data-hover="Get in touch"><span>About Me<span class="spacer"></span></span></a>
 			</li>
 		</ul>
 	</nav>
@@ -118,9 +118,22 @@
 
 
 
-			<div class="container animated">
+			<div class="container padding-top padding-bottom animated">
+				<div class="row transform">
+					<div class="col-lg-12">
 
-				<div class="row padding-top padding-bottom transform separator">
+						<div class="description description--left">
+							<h2>Work Reel</h2>
+						</div>
+
+						<iframe src="https://player.vimeo.com/video/609085890?h=94ce552ea2" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="container animated">
+				<div class="row transform">
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Work List</h2>
@@ -129,16 +142,16 @@
 				</div>
 			</div>
 
+
+
 			<div class="container-fluid">
 				<div class="row padding-bottom">
 					<div class="col-lg-12">
-
 						<div class="work work--mix">
 							<div class="work-grid">
-
 								<div class="work-item w-50" data-delay="200">
-									<a href="work-2.html" class="work-item__link" aria-label="Open Work">
-										<img src="../images/bg-plex.jpg" alt="">
+									<a href="/plex/" class="work-item__link" aria-label="Open Work">
+										<img src="/images/bg-plex.jpg" alt="">
 									</a>
 									<div class="work-label">
 										<p class="work-label__category" data-hover="Open Work"><span>Product Design</span></p>
@@ -147,8 +160,8 @@
 								</div>
 
 								<div class="work-item w-50" data-delay="400">
-									<a href="work-3.html" class="work-item__link" aria-label="Open Work">
-										<img src="../images/bg-moomios.jpg" alt="">
+									<a href="/moomios/" class="work-item__link" aria-label="Open Work">
+										<img src="/images/bg-moomios.jpg" alt="">
 									</a>
 									<div class="work-label">
 										<p class="work-label__category" data-hover="Open Work"><span>Motion Graphics</span></p>
@@ -157,8 +170,8 @@
 								</div>
 
 								<div class="work-item w-50" data-delay="600">
-									<a href="work-5.html" class="work-item__link" aria-label="Open Work">
-										<img src="../images/bg-ishows.jpg" alt="Image Preview 5">
+									<a href="/ishows/" class="work-item__link" aria-label="Open Work">
+										<img src="/images/bg-ishows.jpg" alt="Image Preview 5">
 									</a>
 									<div class="work-label">
 										<p class="work-label__category" data-hover="Open Work"><span>Product Design</span></p>
@@ -167,8 +180,8 @@
 								</div>
 
 								<div class="work-item w-50" data-delay="800">
-									<a href="work-5.html" class="work-item__link" aria-label="Open Work">
-										<img src="../images/bg-fn.jpg" alt="Image Preview 5">
+									<a href="/future-nature/" class="work-item__link" aria-label="Open Work">
+										<img src="/images/bg-fn.jpg" alt="Image Preview 5">
 									</a>
 									<div class="work-label">
 										<p class="work-label__category" data-hover="Open Work"><span>Motion Graphics</span></p>
@@ -253,8 +266,8 @@
 	</main>
 
 
-<script src="../js/jquery-3.6.0.min.js" ></script>
-<script src="../js/plugins.js"></script>
-<script src="../js/scripts.js"></script>
+<script src="/js/jquery-3.6.0.min.js" ></script>
+<script src="/js/plugins.js"></script>
+<script src="/js/scripts.js"></script>
 </body>
 </html>
