--- a/future-nature/index.html
+++ b/future-nature/index.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="http://luisherrero.es/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="http://luisherrero.es/favicon/favicon-16x16.png">
 -->
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body class="smooth-scroll loading futurenature">
@@ -58,16 +58,16 @@
 	<nav class="nav">
 		<ul class="nav-list">
 			<li class="nav-item">
-				<a class="nav-item__link link" href="../portfolio/index.html" aria-label="Visit Portfolio Page" data-hover="My Portfolio"><span>Product Design</span></a>
+				<a class="nav-item__link link" href="/portfolio/" aria-label="Visit Portfolio Page" data-hover="My Portfolio"><span>Product Design</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-item__link link" href="../motion/index.html" aria-label="Visit Motion Graphics Page" data-hover="Let's move!"><span>Motion Graphics</span></a>
+				<a class="nav-item__link link" href="/motion/" aria-label="Visit Motion Graphics Page" data-hover="Let's move!"><span>Motion Graphics</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-item__link link" href="../mentoring/index.html" aria-label="Visit Teaching Page" data-hover="Mentoring"><span>Teaching<span class="spacer"></span></span></a>
+				<a class="nav-item__link link" href="/mentoring/" aria-label="Visit Teaching Page" data-hover="Mentoring"><span>Teaching<span class="spacer"></span></span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-item__link link" href="../about/index.html" aria-label="Visit Contact Page" data-hover="Get in touch"><span>About Me<span class="spacer"></span></span></a>
+				<a class="nav-item__link link" href="/about/" aria-label="Visit Contact Page" data-hover="Get in touch"><span>About Me<span class="spacer"></span></span></a>
 			</li>
 		</ul>
 	</nav>
@@ -138,7 +138,7 @@
 								<p class="info__value">2012</p>
 							</div>
 							<div class="wrapper">
-								<p class="info__value"><a href="https://www.plex.tv/" class="info__link link" aria-label="View More"><i class="fas fa-arrow-right"></i>Visit Website</a></p>
+								<p class="info__value"><a href="http://rivavelarde.com/index.php#portfolio" class="info__link link" aria-label="View More"><i class="fas fa-arrow-right"></i>Visit Website</a></p>
 							</div>
 						</div>
 					</div>
@@ -311,8 +311,8 @@
 	</main>
 
 
-<script src="../js/jquery-3.6.0.min.js" ></script>
-<script src="../js/plugins.js"></script>
-<script src="../js/scripts.js"></script>
+<script src="/js/jquery-3.6.0.min.js" ></script>
+<script src="/js/plugins.js"></script>
+<script src="/js/scripts.js"></script>
 </body>
 </html>
