--- a/about/index.html
+++ b/about/index.html
@@ -176,7 +176,7 @@
 					<div class="col-lg-12">
 						<div class="description padding-bottom description--left">
 							<h2>More About Me</h2>
-							<p>I love cinema, music, and cooking <i class="fas fa-pizza-slice"></i><br><span class="title--small">Don't forget to ask me for my cuban sandwiches recipe.</span></p>
+							<p>I love cinema, music, and cooking.<br><span class="title--small">Don't forget to ask me for my cuban sandwiches recipe.</span></p>
 							<p><a class="resume button button__text button--border" href="https://www.linkedin.com/in/luishj/" target="socila">See Full Resume</a></p>
 						</div>
 					</div>
