--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						<div class="slide-media cover" style="background-image: url('images/bg-intro.jpg')"></div>
 						<div class="wrapper cover">
 							<div class="slide-label">
-								<h2>Hi, my name is Luis Herrero and I'm <span id="wordCarousel">a Product Designer</span></h2>
+								<h2>My name is Luis Herrero and I'm <span id="wordCarousel">a Product Designer</span></h2>
 								<p>Scroll down to see some samples of my work or open the menu to find more info</p>
 							</div>
 						</div>
