--- a/ishows/index.html
+++ b/ishows/index.html
@@ -162,7 +162,7 @@
 
 				<div class="container-fluid animated">
 					<div class="row opacity">
-						<div class="col-lg-12 px-0"><img src="ishows-panels.jpg" alt="Image6"></div>
+						<div class="col-lg-12 px-0"><img src="ishows-panels.jpg"></div>
 					</div>
 				</div>
 
@@ -185,7 +185,7 @@
 							<div class="description description--right">
 								<h2>(Y)Our personal experience</h2>
 								<p>To achieve that, we defined lots of ways to interact with the app. Not only tap actions but also with a ton of gestures, including complex ones with 2 fingers. That way, the user could feel that their common actions could be performed.</p>
-								<p>We provided as well a simple way of customizing the look of the app changing not only colors but also poster density as well as the visual layout.<br>So each user could have a different look on their app with only a few adjustments.</p>
+								<p>We provided as well a simple way of customizing the look of the app changing not only colors but also poster density as well as the visual layout. So each user could have a different look on their app with only a few adjustments.</p>
 								<p>On the visual side of things, this was a real challenge, because even with the customization tools, we wanted to avoid color schemes that decrease readability, or that could cause contrast issues.</p>
 								<p>You know how important is to balance between features and functionality on Product Design</p>
 							</div>
@@ -205,7 +205,7 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>What else do we have to do?</h2>
-								<p>It was a really crazy experience for both of us. We have to do the same things a company does but with a crew of only 2.</p>
+								<p>It was a really crazy experience for both of us. We have to do the same things a company does but with a crew of only two.</p>
 								<p>But fortunately, we had wide feedback when developing the app: From beta testers to friends, translators, and media (bloggers, podcasters, etc)</p>
 								<p>Thinking about it now seems like there were a lot of people that shared our vision on how to develop and design the app and they wanted to help us as much as possible.</p>
 							</div>
