--- a/plex/index.html
+++ b/plex/index.html
@@ -113,7 +113,7 @@
 						</div>
 						<div class="col-lg-12">
 							<div class="description description--left">
-								<p>It's really hard to summarize more than 7 years of work on a company like Plex.</p>
+								<p>It's really hard to summarize more than seven years of work on a company like Plex.</p>
 								<p>I've done so many things I'm sure I'm gonna forget to mention a lot of them, so I'm going to focus on naming at least a few of the highlights and features I've loved to work with during this time.</p>
 							</div>
 						</div>
@@ -153,7 +153,7 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>First thing: A full iOS app redesign!</h2>
-								<p>Plex needed to do a whole revamp of their iOS app, which was designed with system components at that time, and after the work I did on iShows, the idea was to mimic the same visual approach.</p>
+								<p>Plex needed to do a whole revamp of their iOS app, which was designed with system components at that time. After the work I did on iShows, the idea was to mimic the same visual approach.</p>
 								<p>We wanted to simplify navigation and interaction as much as possible, though the number of options we offer to the user was a stepping stone in the works. So after some explorations, research, and feedback from both Product and Engineer teams, we decide to go to a bare minimum approach and start building from there.</p>
 								<p>I loved that first task at Plex. It was a great opportunity to learn about the knots and bolts of the engineering process and was an amazing lesson on how to balance functionality and aesthetics with performance and usage.</p>								
 							</div>
@@ -161,11 +161,13 @@
 					</div>
 				</div>
 
-				<div class="container animated">
-					<div class="row transform">
-						<div class="col-lg-12"><img src="works/plex1.jpg" alt="Image2"></div>
+				<div class="container-fluid animated">
+					<div class="row opacity">
+						<div class="col-lg-12 px-0"><img src="iOS.jpg"></div>
 					</div>
 				</div>
+
+	
 
 
 				<div class="container animated">
@@ -174,7 +176,7 @@
 							<div class="description description--left">
 								<h2>Improving the workflow</h2>
 								<p>When I joined Plex, I suggest a change of tools and flows to be more agile and more fluent communication-wise with the rest of the teams.</p>
-								<p>We dropped Photoshop and start using <strong>Sketch</strong>, along with some other tools like <strong>Zeplin</strong>. We decide to create a design repo to host all design files and even at that time, we had something similar to version control with those Sketch files.</p>
+								<p>We dropped Photoshop and start using <strong>Sketch</strong>, along with some other tools like <strong>Zeplin</strong>. We decide to create a design repo to host all design files and, even at that time, we had something similar to version control with those Sketch files.</p>
 								<p>We created... Well, I got the idea but it was thanks to my wonderful iOS programming workmates that we developed a <strong>Sketch Plugin</strong> that populates our designs components with real data from a special server with beautiful, curated content. That way, everyone who needed to create a mock wouldn't have to care about searching for it since the plugin did all the work. Even Marketing used it to create imagery assets for Newsletters and other communication pieces.</p>
 							</div>
 						</div>
@@ -208,10 +210,9 @@
 					</div>
 				</div>
 
-
 				<div class="container-fluid animated">
 					<div class="row opacity">
-						<div class="col-lg-12 full--width px-0"><img src="works/plex1.jpg" alt="Image6"></div>
+						<div class="col-lg-12 px-0"><img src="isometric.png"></div>
 					</div>
 				</div>
 
@@ -220,7 +221,7 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>Goals Achieved</h2>
-								<p>No need to mention this, but everyone that works in a company remotely knows that in the end, success is a team effort. Saying the contrary would be wrong. And the good thing about working as a team is that every one of us can develop our strengths.</p>
+								<p>No need to mention this, but everyone that works remotely in a company knows that in the end, success is a team effort. Saying the contrary would be wrong. And the good thing about working as a team is that every one of us can develop our strengths.</p>
 								<p>In my case, I like to approach every new feature, interaction, and ultimately visual design, with a clean, minimalistic approach to get simple processes to the user. My experience says that everything could get more complicated quite easily so the cleaner and simpler starting point the better.</p>
 								<p>I'm also pretty excited about animation as a visual layer, not only in terms of aesthetics but also as a narrative and informative component. I've had the chance to improve that experience in Plex as well, doing from preload and micro animations, to fullscreen intros to empower the brand.</p>
 								<p>As I was called on a meeting "He's our animation guy"... So I guess I can do birthday parties.</p>
@@ -238,24 +239,24 @@
 
 									<div class="swiper-slide">
 										<div class="slide-content">
-											<a href="img/works/1/3.jpg" class="content-image" data-source="img/works/1/3.jpg">
-												<img src="works/plex1.jpg" alt="Image3">
+											<a href="carousel1.jpg" class="content-image" data-source="carousel1.jpg">
+												<img src="carousel1.jpg" alt="Image3">
 											</a>
 										</div>
 									</div>
 
 									<div class="swiper-slide">
 										<div class="slide-content">
-											<a href="img/works/1/4.jpg" class="content-image" data-source="img/works/1/4.jpg">
-												<img src="works/plex1.jpg" alt="Image4">
+											<a href="carousel2.jpg" class="content-image" data-source="carousel2.jpg">
+												<img src="carousel2.jpg" alt="Image4">
 											</a>
 										</div>
 									</div>
 
 									<div class="swiper-slide">
 										<div class="slide-content">
-											<a href="img/works/1/5.jpg" class="content-image" data-source="img/works/1/5.jpg">
-												<img src="works/plex1.jpg" alt="Image5">
+											<a href="carousel3.jpg" class="content-image" data-source="carousel3.jpg">
+												<img src="carousel3.jpg" alt="Image5">
 											</a>
 										</div>
 									</div>
@@ -263,24 +264,24 @@
 
 									<div class="swiper-slide">
 										<div class="slide-content">
-											<a href="img/works/1/3.jpg" class="content-image" data-source="img/works/1/3.jpg">
-												<img src="works/plex1.jpg" alt="Image3">
+											<a href="carousel4.jpg" class="content-image" data-source="carousel4.jpg">
+												<img src="carousel4.jpg" alt="Image3">
 											</a>
 										</div>
 									</div>
 
 									<div class="swiper-slide">
 										<div class="slide-content">
-											<a href="img/works/1/4.jpg" class="content-image" data-source="img/works/1/4.jpg">
-												<img src="works/plex1.jpg" alt="Image4">
+											<a href="carousel5.jpg" class="content-image" data-source="carousel5.jpg">
+												<img src="carousel5.jpg" alt="Image4">
 											</a>
 										</div>
 									</div>
 
 									<div class="swiper-slide">
 										<div class="slide-content">
-											<a href="img/works/1/5.jpg" class="content-image" data-source="img/works/1/5.jpg">
-												<img src="works/plex1.jpg" alt="Image5">
+											<a href="carousel6.jpg" class="content-image" data-source="carousel6.jpg">
+												<img src="carousel6.jpg" alt="Image5">
 											</a>
 										</div>
 									</div>
