--- a/future-nature/index.html
+++ b/future-nature/index.html
@@ -153,7 +153,7 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>Some background...</h2>
-								<p>Bernardo and I met quite a long time ago. Initially he asked me to help him with some web development, but after working together on a couple of projects, we decide to collaborate more often.</p>
+								<p>Bernardo Rivavelarde and I met quite a long time ago. Initially he asked me to help him with some web development, but after working together on a couple of projects, we decide to collaborate more often.</p>
 								<p>He's an amazing graphic designer and he creates lovely works of imagery. Normally those designs are meant to be presented as static output, like posters and signages. But when the project needs an additional layer of animation or interaction, that's where my job starts.</p>
 								<p>So, after a few projects working together, and after we collaborated on Homodigitalis, his second exhibition, he asked me to help him developing the motion visuals for his 3rd art exhibition called <strong>Future Nature</strong>.<br>And I couldn't be more excited!!!</p>
 							</div>	
@@ -189,7 +189,7 @@
 							<div class="description description--right">
 								<h2>Adding the Soundtrack</h2>
 								<p><strong>The Lab</strong> did a different approach on this work and instead of adjusting the animation to the music track, they decided to do the ambient music and effects after the animation was completed.</p>
-								<p>It was an amazing piece of musical engineering because we only need to adjust a few frames on the animation to make it work at 100%. Ne need to say that the soundtrack is outstanding as always.</p>
+								<p>It was an amazing piece of musical engineering because we only need to adjust a few frames on the animation to make it work at 100%. No need to say that the soundtrack is outstanding as always.</p>
 							</div>
 						</div>
 					</div>
@@ -204,8 +204,8 @@
 								<h2>Animation Techniques</h2>
 								<p>The heart of this art piece is all about creativity. So you can explore a lot of different ways to express, as long as it works with the narrative of the animation.</p>
 								<p>So we use and lots of different animation techniques. From frame-by-frame animation, to programmatic one using expressions.</p>
-								<p>From organic transitions to static and frozen frame animations, across path animation, camera tracking techniques... you name it  <i class="far fa-smile"></i></p>
-								<p>But every technique had a purpose: <strong>amplify the message of the motion narrative</strong>.<br>One of the things I learned when I was doing my animation training courses, was that every effect and movement has to have a reason. Not because you can use something, you need to do it.</p>
+								<p>From organic transitions to static and frozen frame animations, across path animation, camera tracking techniques... you name it.</p>
+								<p>But every technique had a purpose: <strong>Amplify the message of the motion narrative</strong>.<br>One of the things I learned when I was doing my animation training courses, was that every effect and movement has to have a reason. Not because you can use something, you need to do it.</p>
 							</div>
 						</div>
 					</div>
@@ -226,7 +226,7 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>The Opening</h2>
-								<p>In 2012, Future Nature was presented at the Museum Prince Felipe at The City of Arts and Sciences of Valencia, Spain. Future Nature includes images, sound landscapes, and motion graphics that show a new environment molded by new technologies.</p>
+								<p>In 2012, Future Nature was presented at the Museo Principe Felipe en La Ciudad de las Artes y las Ciencias de Valencia, España. Future Nature includes images, sound landscapes, and motion graphics that show a new environment molded by new technologies.</p>
 								<p>The exhibition was in Valencia from March 14, 2012 to January 7, 2013, but due to success with more than 1.5 million visitors, it was extended until April 14, 2013.</p>
 								<p>Future Nature became a finalist at the <strong>2011 Japan Media Art Festival</strong> (Tokyo) and was included in "best of the year category" at <strong>2011 Prix Ars Electronica</strong> (Austria). At the end of 2012, Future Nature was selected to be shown in the <strong>2012 Yota Space Festival</strong> in Saint Petersburg (Russia).</p>				
 							</div>
