--- a/plex/index.html
+++ b/plex/index.html
@@ -163,7 +163,7 @@
 
 				<div class="container-fluid animated">
 					<div class="row opacity">
-						<div class="col-lg-12 px-0"><img src="iOS.jpg"></div>
+						<div class="col-lg-12 px-0"><img src="ios.jpg"></div>
 					</div>
 				</div>
 
