Update grammar on pages

--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,7 @@
 						</div>
 						<div class="col-lg-12">
 							<div class="description description--left">
-								<p>I've been working on interface design since last century, crafting products and experiences of all kinds: from <strong>digital advertising</strong> campaigns to <strong>art exhibitions</strong>, salted with some programming work in a variety of ages, like the ancient Actionscript language, that you're not supposed to mention, to recent Figma plugin code.</p>
+								<p>I've been working in interface design since the last century, crafting products and experiences of all kinds: from <strong>digital advertising</strong> campaigns to <strong>art exhibitions</strong>, spiced up with some programming work across a wide range of technological eras, like when we used the ancient Actionscript language, that you're not supposed to mention, to recent Figma plugin code.</p>
 							</div>
 						</div>
 					</div>
@@ -128,7 +128,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Background</h2>
-							<p>I've always been passionate about design. I got hooked with Photoshop and 3D Studio Max when I was a teenager and were supposedly playing video games <i class="far fa-smile"></i></p>
+							<p>I've always been passionate about design. I got hooked with Photoshop and 3D Studio Max when I was a teenager and was supposedly playing video games <i class="far fa-smile"></i></p>
 							<p>When I studied <strong>Multimedia App Development (HNC)</strong> back in 1996, I found out that not only software has to work properly, but it has to be presented to the user in a friendly, useful and aesthetic way.</p>
 							<p>That was the moment I decide to focus on how to improve the interface I was building, regardless of product, to make the experience for the user easier and better.</p>
 						</div>
@@ -148,8 +148,8 @@
 								<li>Freelance <span>All of the above plus Teaching and Mentoring</span></li>
 								<li>Plex <span>Product Design / Motion Graphics</span></li>
 							</ul>
-							<p>One of my goals is to be able to keep learning at work. I think the moment I stop learning on a job, it's time to move to a new challenge.</p>
-							<p>And that's one of the things I'm most excited about working in Product Design.<br>The fact you need to keep learning new stuff every day, and most of it, thanks to your workmates.</p>
+							<p>One of my goals is to be able to keep learning at work. I think the moment I stop learning on a job, it's time to move on to a new challenge.</p>
+							<p>And that's one of the things I'm most excited about working in Product Design,<br>the fact that you need to keep learning new stuff every day, and most of it, thanks to your workmates.</p>
 							<p>You can find more about me here:</p>
 							<ul class="workplaces">
 								<li class="social-item">
@@ -191,7 +191,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Clients</h2>
-							<p>I had the luck of working with lots of amazing brands and companies over the years</p>
+							<p>I've had the luck of working with lots of amazing brands and companies over the years</p>
 						</div>
 					</div>
 				</div>
