--- a/motion/index.html
+++ b/motion/index.html
@@ -112,7 +112,7 @@
 				<div class="container animated">
 					<div class="row padding-bottom transform">
 						<div class="col-lg-12">
-							<h1 class="head__title">Motion should be equally consider as any other part on modern Design Systems.</h1>
+							<h1 class="head__title">Motion should be considered just like any other part of any modern Design System.</h1>
 						</div>
 					</div>
 				</div>
@@ -129,7 +129,7 @@
 								<h2>Bringing ideas to life</h2>
 								<p>Back in the day, we had an amazing tool to create communication pieces called Flash. It mixed a few disciplines like graphic design, a programming language, and a timeline with keyframes to animate things.</p>
 								<p>And for me, it was love at first sight!</p>
-							</div>	
+							</div>
 						</div>
 					</div>
 				</div>
@@ -139,10 +139,10 @@
 						<div class="col-lg-12">
 							<div class="description description--right">
 								<h2>Improving the message</h2>
-								<p>Animation it's capable of enhance the way that you communicate something and engage with the user in such a powerful way.</p>
-								<p>From complex intro animations with a full narrative, timing, and structure, to minor ones like state-change effects, preloaders, transitions, or just a visual feedback.</p>
+								<p>Animation is capable of enhancing the way you communicate something and engage with the user in such a powerful way.</p>
+								<p>From complex intro animations with a full narrative, timing, and structure, to minor ones like state-change effects, preloaders, transitions, or just visual feedback.</p>
 								<p></p>
-							</div>	
+							</div>
 						</div>
 					</div>
 				</div>
@@ -154,8 +154,8 @@
 							<div class="description description--left">
 								<h2>Context in Motion</h2>
 								<p>Animation makes you think about what you're doing. When building a complex animation, tweaking values to get a natural, organic movement, you know if that motion graphic is working or not.</p>
-								<p>The thinking process to find a balance between speed and coherence, effects and narrative, makes the whole motion design job so appealing!</p>
-							</div>	
+								<p>The thinking process to find the balance between speed and coherence, effects and narrative, makes the whole motion design process so appealing!</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -173,7 +173,7 @@
 				</div>
 
 
-		
+
 
 
 
