--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -203,7 +203,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Clients</h2>
-							<p>I had the luck of working with lots of amazing brands and companies over the years</p>
+							<p>I've had the luck of working with lots of amazing brands and companies over the years</p>
 						</div>
 					</div>
 				</div>
@@ -234,7 +234,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Awards</h2>
-							<p>Some of the advertising pieces I've worked in earned some public recognition in different festivals</p>
+							<p>Some of the advertising pieces I've worked on have earned some public recognition in different festivals</p>
 						</div>
 					</div>
 				</div>
