Update formation to training

--- a/mentoring/index.html
+++ b/mentoring/index.html
@@ -136,7 +136,7 @@
 					<div class="row padding-bottom transform">
 						<div class="col-lg-12">
 							<div class="description description--right">
-								<h2>Online formation</h2>
+								<h2>Online training</h2>
 								<p>Last year, when we stayed at home under the lockdown, I decided to help a bit and did a Figma training course with people that were without a job due to COVID.</p>
 								<p>It was only 14 classes, nothing too fancy, but again, the idea was to help a bit. The awesome outcome is that some of the students are now working in design-related jobs!</p>
 								<p>My latest venture in online training has been doing a UX Master Course with <a href="https://www.eoi.es/es" target="socila">EOI</a> where I was teaching Visual Design. And I'm going to be Training Director in the upcoming course that starts in the Fall.</p>
