--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -125,8 +125,7 @@
 						<div class="description description--left">
 							<h2>Work Reel</h2>
 						</div>
-
-						<iframe src="https://player.vimeo.com/video/609085890?h=94ce552ea2" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+						<iframe src="https://player.vimeo.com/video/609243986?h=39130cc2c9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -203,7 +202,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Clients</h2>
-							<p>I've had the luck of working with lots of amazing brands and companies over the years</p>
+							<p>I had the luck of working with lots of amazing brands and companies over the years</p>
 						</div>
 					</div>
 				</div>
@@ -234,7 +233,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Awards</h2>
-							<p>Some of the advertising pieces I've worked on have earned some public recognition in different festivals</p>
+							<p>Some of the advertising pieces I've worked in earned some public recognition in different festivals</p>
 						</div>
 					</div>
 				</div>
