--- a/ishows/index.html
+++ b/ishows/index.html
@@ -151,7 +151,7 @@
 					<div class="row padding-top padding-bottom transform">
 						<div class="col-lg-12">
 							<div class="description description--left">
-								<h2>I'm not going to start coding again but...</h2>
+								<h2>I'm not going to start coding again but…</h2>
 								<p>Ok, there was a time I wanted to learn Objective-C. I actually took some classes and by the end of the course, I realized 2 things: In order to be a proper programmer, I would have to commit full time and I wasn't willing to drop my design job. The other was I was eager to collaborate with that course teacher because he really knows how to code.</p>
 								<p>After a couple of "meetings", we decided to do a TV tracker app for iOS. And there's no need to say that Luis Recuenco, my iShows partner, has become also one of my best friends!</p>
 							</div>
@@ -171,7 +171,7 @@
 					<div class="row padding-top padding-bottom transform">
 						<div class="col-lg-12">
 							<div class="description description--left">
-								<h2>A TV app, ok... but what would be our personal touch?</h2>
+								<h2>A TV app, ok… but what would be our personal touch?</h2>
 								<p>Even at that time, the landscape of TV Show tracker apps was a bit crowded, so in order to make a stab there, we should provide our users a fresh, newer experience in order to drop other apps.</p>
 								<p>The key for us was <strong>personalization</strong> and make the app <strong>super easy to use</strong>, so we picked the idea behind Apple <strong>i-products</strong> and make the app something unique to the user. Something they might feel as personal.</p>
 							</div>
@@ -206,7 +206,7 @@
 							<div class="description description--left">
 								<h2>What else do we have to do?</h2>
 								<p>It was a really crazy experience for both of us. We have to do the same things a company does but with a crew of only two.</p>
-								<p>But fortunately, we had wide feedback when developing the app: From beta testers to friends, translators, and media (bloggers, podcasters, etc)</p>
+								<p>Fortunately, we had wide feedback when developing the app: From beta testers to friends, translators, and media (bloggers, podcasters, etc)</p>
 								<p>Thinking about it now seems like there were a lot of people that shared our vision on how to develop and design the app and they wanted to help us as much as possible.</p>
 							</div>
 						</div>
