--- a/moomios/index.html
+++ b/moomios/index.html
@@ -154,7 +154,7 @@
 								<h2>The work</h2>
 								<p>Unfortunately, I cannot say much about this project since it hasn't been released yet.</p>
 								<p>But I wanted to have a dedicated place for this work on my website since it really makes a milestone in my professional career. I've always loved animation-related work, and the chance of doing some shots for an animation movie was a really huge deal.</p>
-								<p>Cannot wait to show you my work in this project as well as describing the approach we took in order to design and create the final shots that would appear in the movie.</p>
+								<p>Cannot wait to show you my work in this project as well as describing the approach we took in order to design and create the final shots that will appear in the movie.</p>
 							</div>
 						</div>
 					</div>
