--- a/plex/index.html
+++ b/plex/index.html
@@ -114,7 +114,7 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<p>It's really hard to summarize more than seven years of work on a company like Plex.</p>
-								<p>I've done so many things I'm sure I'm gonna forget to mention a lot of them, so I'm going to focus on naming at least a few of the highlights and features I've loved to work with during this time.</p>
+								<p>I've done so many things I'm sure I'm gonna forget to mention a lot of them, so I'm going to focus on naming at least a few of the highlights and features I've loved to work on during this time.</p>
 							</div>
 						</div>
 					</div>
@@ -154,7 +154,7 @@
 							<div class="description description--left">
 								<h2>First thing: A full iOS app redesign!</h2>
 								<p>Plex needed to do a whole revamp of their iOS app, which was designed with system components at that time. After the work I did on iShows, the idea was to mimic the same visual approach.</p>
-								<p>We wanted to simplify navigation and interaction as much as possible, though the number of options we offer to the user was a stepping stone in the works. So after some explorations, research, and feedback from both Product and Engineer teams, we decide to go to a bare minimum approach and start building from there.</p>
+								<p>We wanted to simplify navigation and interaction as much as possible, though the number of options we offered to the user was a stepping stone in the works. So after some explorations, research, and feedback from both Product and Engineer teams, we decided to go with a bare minimum approach and start building from there.</p>
 								<p>I loved that first task at Plex. It was a great opportunity to learn about the knots and bolts of the engineering process and was an amazing lesson on how to balance functionality and aesthetics with performance and usage.</p>								
 							</div>
 						</div>
@@ -175,9 +175,9 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>Improving the workflow</h2>
-								<p>When I joined Plex, I suggest a change of tools and flows to be more agile and more fluent communication-wise with the rest of the teams.</p>
-								<p>We dropped Photoshop and start using <strong>Sketch</strong>, along with some other tools like <strong>Zeplin</strong>. We decide to create a design repo to host all design files and, even at that time, we had something similar to version control with those Sketch files.</p>
-								<p>We created... Well, I got the idea but it was thanks to my wonderful iOS programming workmates that we developed a <strong>Sketch Plugin</strong> that populates our designs components with real data from a special server with beautiful, curated content. That way, everyone who needed to create a mock wouldn't have to care about searching for it since the plugin did all the work. Even Marketing used it to create imagery assets for Newsletters and other communication pieces.</p>
+								<p>When I joined Plex, I suggested a change of tools and flows to be more agile and more fluent communication-wise with the rest of the teams.</p>
+								<p>We dropped Photoshop and started using <strong>Sketch</strong>, along with some other tools like <strong>Zeplin</strong>. We decided to create a design repo to host all the design files and, even at that time, we had something similar to version control with those Sketch files.</p>
+								<p>We created… Well, I got the idea but it was thanks to my wonderful workmates from the iOS team that we developed a <strong>Sketch Plugin</strong> that populated our designs components with real data from a special server with beautiful, curated content. That way, everyone who needed to create a mock wouldn't have to care about searching for it since the plugin did all the work. Even Marketing used it to create imagery assets for Newsletters and other communication pieces.</p>
 							</div>
 						</div>
 					</div>
@@ -188,9 +188,9 @@
 						<div class="col-lg-12">
 							<div class="description description--right">
 								<h2>Let's play</h2>
-								<p>One of the treats of working in Plex is you can think, explore and design for several platforms: TV, Mobile, and Desktop.</p>
+								<p>One of the treats of working at Plex is you can think, explore and design for several platforms: TV, Mobile, and Desktop.</p>
 								<p>This gives you a holistic way of thinking and solving issues while you need to think of the different design nuances that each platform has. You only have to think about the input of these platforms.</p>
-								<p>And that was one of the best challenges I had on Plex: Having to design the different players (both video and audio) we have across clients and platforms.</p>
+								<p>And that was one of the best challenges I had at Plex: Having to design the different players (both video and audio) we have across clients and platforms.</p>
 							</div>
 						</div>
 					</div>
@@ -202,8 +202,8 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>Our Design System</h2>
-								<p>A couple of years ago, we decided to switch to <strong>Figma</strong>, mainly because it provided a workflow quite similar to what we had at that time (online repo, development handoff...) and also give us a way to do pair design while we're on meetings, speeding things up quite a bit.</p>
-								<p>I'm not gonna say that it was a smooth transition. We had to rebuilt plugins and design system files, but we seize the change to improve our visual components and make them much more versatile and scalable.</p>
+								<p>A couple of years ago, we decided to switch to <strong>Figma</strong>, mainly because it provided a workflow quite similar to what we had at that time (online repo, development handoff…) and also gave us a way to do pair design while we're on meetings, speeding things up quite a bit.</p>
+								<p>I'm not gonna say that it was a smooth transition. We had to rebuild plugins and design system files, but we seized the change to improve our visual components and make them much more versatile and scalable.</p>
 								<p>Now we have an amazing Design System that supports any changes, additions, or tweaks in a simpler way, and provides a good balance between visual consistency across clients (TV, Web, Mobile) and platform-specific navigation and interaction patterns.</p>
 							</div>
 						</div>
@@ -221,10 +221,10 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>Goals Achieved</h2>
-								<p>No need to mention this, but everyone that works remotely in a company knows that in the end, success is a team effort. Saying the contrary would be wrong. And the good thing about working as a team is that every one of us can develop our strengths.</p>
+								<p>No need to mention this, but everyone that works remotely knows that in the end, success is a team effort. Saying the contrary would be wrong. And the good thing about working as a team is that every one of us can develop our strengths.</p>
 								<p>In my case, I like to approach every new feature, interaction, and ultimately visual design, with a clean, minimalistic approach to get simple processes to the user. My experience says that everything could get more complicated quite easily so the cleaner and simpler starting point the better.</p>
-								<p>I'm also pretty excited about animation as a visual layer, not only in terms of aesthetics but also as a narrative and informative component. I've had the chance to improve that experience in Plex as well, doing from preload and micro animations, to fullscreen intros to empower the brand.</p>
-								<p>As I was called on a meeting "He's our animation guy"... So I guess I can do birthday parties.</p>
+								<p>I'm also pretty excited about animation as a visual layer, not only in terms of aesthetics but also as a narrative and informative component. I've had the chance to improve that experience on Plex as well, doing from preload and micro animations, to fullscreen intros to empower the brand.</p>
+								<p>As I was called on a meeting "He's our animation guy"… I guess I can do birthday parties.</p>
 							</div>
 						</div>
 					</div>
