--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,7 @@
 						</div>
 						<div class="col-lg-12">
 							<div class="description description--left">
-								<p>I've been working in interface design since the last century, crafting products and experiences of all kinds: from <strong>digital advertising</strong> campaigns to <strong>art exhibitions</strong>, spiced up with some programming work across a wide range of technological eras, like when we used the ancient Actionscript language, that you're not supposed to mention, to recent Figma plugin code.</p>
+								<p>I've been working in interface design since the last century, crafting products and experiences of all kinds: from <strong>digital advertising</strong> campaigns to <strong>art exhibitions</strong>, spiced up with some programming work across a wide range of technological eras, like when we used the ancient ActionScript language, that you're not supposed to mention, to recent Figma plugin code.</p>
 							</div>
 						</div>
 					</div>
@@ -222,7 +222,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Awards</h2>
-							<p>Some of the advertising pieces I've worked in earned some public recognition in different festivals</p>
+							<p>Some of the advertising pieces I've worked on earned some public recognition in different festivals</p>
 						</div>
 					</div>
 				</div>
