--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -233,7 +233,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Awards</h2>
-							<p>Some of the advertising pieces I've worked in earned some public recognition in different festivals</p>
+							<p>Some of the advertising pieces I've worked on earned some public recognition in different festivals</p>
 						</div>
 					</div>
 				</div>
